--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
    "scripts": {
       "start": "ts-node src/index.ts",
       "dev": "env-cmd -f .env.development nodemon --exec ts-node ./src/server.ts",
-      "start:prod": "env-cmd -f .env.production --exec ts-node ./src/server.ts",
+      "start:prod": "env-cmd -f .env.production ts-node ./src/server.ts",
       "test": "echo \"Error: no test specified\" && exit 1",
       "typeorm": "typeorm-ts-node-commonjs"
    },
