--- a/server/.env.production
+++ b/server/.env.production
@@ -1,5 +1,5 @@
 PORT=4000
 NODE_ENV=production
 APP_URL=ec2-51-20-84-98.eu-north-1.compute.amazonaws.com:4000
-ORIGIN=ec2-51-20-84-98.eu-north-1.compute.amazonaws.com
+ORIGIN=ec2-51-20-84-98.eu-north-1.compute.amazonaws.com:3000
 JWT_SECRET=super_secret
